fix docker configs

--- a/course_1/docker-compose.yml
+++ b/course_1/docker-compose.yml
@@ -4,5 +4,8 @@ services:
   node:
     build: ./code
     command: npm start
+    volumes:
+      - ./code/:/code/
+      - /code/node_modules
     ports:
       - 3000:3000
