--- a/course_1/docker-compose.yml
+++ b/course_1/docker-compose.yml
@@ -9,3 +9,20 @@ services:
       - /code/node_modules
     ports:
       - 3000:3000
+
+  mysql_db:
+    image: mysql
+    volumes:
+      - db_data:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: course1
+      MYSQL_DATABASE: course_1
+      MYSQL_USER: course1
+      MYSQL_PASSWORD: course1
+
+    ports:
+      - 3306:3306
+
+volumes:
+  db_data: {}
