--- a/course_1/docker-compose.yml
+++ b/course_1/docker-compose.yml
@@ -16,6 +16,7 @@ services:
 
   mysql_db:
     image: mysql
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
       - db_data:/var/lib/mysql
     restart: always
